--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -278,7 +278,7 @@ ul#nav li.current a {
   color: #313131;
 }
 
-#resume .company-logo {
+#resume .logo {
   width: 60px;
   height: 60px;
   margin-left: -80px;
